--- a/views/pages/culture-and-festivals.ejs
+++ b/views/pages/culture-and-festivals.ejs
@@ -12,8 +12,8 @@
         <%- include('../partials/top-nav-bar'); %>
 
         <div id="culture-and-festivals1">
-            <div id="culture-and-festivals11">
-                <div id="culture-and-festivals111">
+            <div class="transparent-background-title">
+                <div id="culture-and-festivals11">
                     <p class="font-white" id="title">CULTURE & FESTIVALS</p>
                     <div>
                         <div>
