--- a/views/pages/food.ejs
+++ b/views/pages/food.ejs
@@ -12,8 +12,8 @@
         <%- include('../partials/top-nav-bar'); %>
 
         <div id="food1">
-            <div id="food11">
-                <div id="food111">
+            <div class="transparent-background-title">
+                <div id="food11">
                     <p class="font-white" id="title">FOOD</p>
                     <div>
                         <div>
