--- a/views/pages/places-and-landmarks.ejs
+++ b/views/pages/places-and-landmarks.ejs
@@ -12,8 +12,8 @@
         <%- include('../partials/top-nav-bar'); %>
 
         <div id="places-and-landmarks1">
-            <div id="places-and-landmarks11">
-                <div id="places-and-landmarks111">
+            <div class="transparent-background-title">
+                <div id="places-and-landmarks11">
                     <p class="font-white" id="title">PLACES & LANDMARKS</p>
                     <div>
                         <div>
