--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,3 +7,4 @@
 <script defer src="/js/light-dark-mode.js"></script>
 <script defer src="/js/side-nav-bar.js"></script>
 <script defer src="/js/active-page.js"></script>
+<script defer src="/js/traffic-map.js"></script>
