--- a/views/pages/traffic.ejs
+++ b/views/pages/traffic.ejs
@@ -12,7 +12,7 @@
         <%- include('../partials/top-nav-bar'); %>
 
         <title>Traffic Map</title>
-        <script async src="https://maps.googleapis.com/maps/api/js?key=<%=API_KEY%>&libraries=geometry&callback=initMap"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=<%=API_KEY%>&libraries=geometry"></script>
         <style>
           #map {
             height: 100%;
@@ -28,6 +28,7 @@
         </style>
       </head>
       <body>
+        
         <div id="map"></div>
     </body>
 </html>
