added backend for user registration
- minor fixes to nav links
- initial backend for registration

--- a/views/partials/top-nav-bar.ejs
+++ b/views/partials/top-nav-bar.ejs
@@ -9,7 +9,7 @@
         </div>
         <!--home link-->
         <div id="home">
-            <a id="home-btn" href="/home">LAGAW</a>
+            <a id="home-btn" href="/">LAGAW</a>
         </div>
     </li>
     
