--- a/views/pages/accommodation.ejs
+++ b/views/pages/accommodation.ejs
@@ -10,5 +10,19 @@
         <%- include('../partials/side-nav-bar'); %>
         <!-- top-nav-bar.ejs -->
         <%- include('../partials/top-nav-bar'); %>
+
+        <div id="places-and-landmarks1">
+            <div class="transparent-background-title">
+                <div id="places-and-landmarks11">
+                    <p class="font-white" id="title">ACCOMMODATION</p>
+                    <div class="filter-row">
+                        <p class="font-white">Sort By:</p>
+                        <button>Name</button>
+                        <button>Type</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </body>
 </html>
