--- a/views/pages/culture-and-festivals.ejs
+++ b/views/pages/culture-and-festivals.ejs
@@ -15,10 +15,10 @@
             <div class="transparent-background-title">
                 <div id="culture-and-festivals11">
                     <p class="font-white" id="title">CULTURE & FESTIVALS</p>
-                    <div>
-                        <div>
-                            <!--<img src="/img/festive-walk.png">-->
-                        </div>
+                    <div class="filter-row">
+                        <p class="font-white">Sort By:</p>
+                        <button>Name</button>
+                        <button>Date</button>
                     </div>
                 </div>
             </div>
