--- a/views/pages/places-and-landmarks.ejs
+++ b/views/pages/places-and-landmarks.ejs
@@ -15,10 +15,11 @@
             <div class="transparent-background-title">
                 <div id="places-and-landmarks11">
                     <p class="font-white" id="title">PLACES & LANDMARKS</p>
-                    <div>
-                        <div>
-                            <!--<img src="/img/festive-walk.png">-->
-                        </div>
+                    <div class="filter-row">
+                        <p class="font-white">Sort By:</p>
+                        <button>Name</button>
+                        <button>Reviews</button>
+                        <button>Date</button>
                     </div>
                 </div>
             </div>
