--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -299,6 +299,12 @@ ul{
     width: 50%;
 }
 
+.two-vertical-panels{
+    display: flex;
+    align-items: center;
+    /*justify-content: ;*/
+}
+
 #home22{
     display: flex;
     justify-content: center;
@@ -425,4 +431,51 @@ ul{
     border-radius: 20px;
     cursor: pointer;
     padding: 5px 10px 5px 10px;
+}
+
+#carousel-body {
+    height: 100vh;
+    display: grid;
+    place-items: center;
+}
+
+.carousel {
+    width: 100%;
+    max-width: 800px;
+    height: 350px;
+    position: relative;
+    overflow: hidden;
+}
+
+.card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.carousel > button{
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    padding: 10px;
+    border: none;
+    border-radius: 50%;
+    z-index: 10px;
+    cursor: pointer;
+    background-color: #FFF;
+    font-size: 18px;
+}
+
+.carousel > button:active{
+    transform: scale(1.1);
+}
+
+#btn-prev{
+    top: 45%;
+    left: 2%;
+}
+
+#btn-next{
+    top: 45%;
+    right: 2%;
 }
