--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -28,16 +28,21 @@
         </div>
 
         <div id="home2">
-            <div class="transparent-background-left">
-                <div id="home22">
-                    <p class="font-white" id="title">THE CITY'S MOST FAMOUS HIGHLIGHTS</p>
+            <div class="transparent-background">
+                <div class = "two-vertical-panels">
+                    <div id = "home22">
+                        <p class="font-white" id="title">THE CITY'S MOST FAMOUS HIGHLIGHTS</p>
                         <p class="font-white" id="content"><span class="font-peach">Potter ipsum</span> wand elf parchment wingardium. 
-                        Wand betrayal parseltongue soul detention elf lion back his. 
-                        Dead bertie hat kedavra aragog gnomes wand palominos erumpent robes. 
-                        Hair stroke time-turner newt fantastic bred erised pigwidgeon mine rva. 
-                        Bat forbidden cabbage parchment sunshine. 
-                        Bag moon ground moon quidditch sight grim.
-                    </p>
+                            Wand betrayal parseltongue soul detention elf lion back his. 
+                            Dead bertie hat kedavra aragog gnomes wand palominos erumpent robes. 
+                            Hair stroke time-turner newt fantastic bred erised pigwidgeon mine rva. 
+                            Bat forbidden cabbage parchment sunshine. 
+                            Bag moon ground moon quidditch sight grim.
+                        </p>
+                    </div>
+                    <div id = "home22">
+                        <%- include('../partials/carousel'); %>
+                    </div>
                 </div>
             </div>
         </div>
