--- a/views/partials/user-form.ejs
+++ b/views/partials/user-form.ejs
@@ -1,8 +1,9 @@
-<label for="username">Username:</label><br>
+<label for="username" class="font-peach" id="content">Username:</label><br>
 <input type="text" id="username" name="username" minlength="8" maxlength="100"><br>
-<label for="email">Email:</label><br>
+<label for="email" class="font-peach" id="content">Email:</label><br>
 <input type="email" id="email" name="email"><br>
-<label for="email">Password:</label><br>
-<input type="password" id="email" name="email" minlength="8" maxlength="100"><br>
+<label for="password" class="font-peach" id="content">Password:</label><br>
+<input type="password" id="password" name="email" minlength="8" maxlength="100"><br>
 <!--pattern attribute for at least one special character in password-->
+<input type="submit" value="Sign up" /><br>
 <input type="submit" value="Forgot password?" />
