Near complete login and reg page + food input format
In login and register page
- centered opaque division
- better font style format
- button design adjusted
 Need: must give font style and buttons better format

In food input from database:
- partial design of food input (pic, desc, and heart)
Need: whole backend

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -15,16 +15,20 @@
     <%- include('../partials/top-nav-bar'); %>
 
     <div class="uin-background">
-        <div class="uin-transparent-black">
-            <div class="uin-center-left">
-                <form action="/login" method>
-                    <%- include('../partials/user-form'); %>
-                </form>
+        <div id="uin-one-third-column">
+            <div></div>
+            <div class="uin-transparent-black">
+                <div class="uin-center-left">
+                    <form action="/login" method>
+                        <%- include('../partials/user-form'); %>
+                    </form>
+                </div>
+                <div class="uin-center-right">
+                    <p class="font-peach" id="title">Hey there!</p>
+                    <p class="font-white" id="content">Log into an existing account</p>
+                </div>
             </div>
-            <div class="uin-center-right">
-                <p class="font-peach" id="title">Hey there!</p>
-                <p class="font-white" id="content">Log into an existing account</p>
-            </div>
+            <div></div>
         </div>
     </div>
 </body>
