--- a/views/partials/user-form.ejs
+++ b/views/partials/user-form.ejs
@@ -3,7 +3,9 @@
 <label for="email" class="font-peach" id="content">Email:</label><br>
 <input type="email" id="email" name="email"><br>
 <label for="password" class="font-peach" id="content">Password:</label><br>
-<input type="password" id="password" name="email" minlength="8" maxlength="100"><br>
+<input type="password" id="password" name="password" minlength="8" maxlength="100"><br>
 <!--pattern attribute for at least one special character in password-->
-<input type="submit" value="Sign up" /><br>
-<input type="submit" value="Forgot password?" />
+<div class="center-buttons">
+    <input type="submit" id="form-button" value="Sign up" />
+    <input type="submit" id="form-button" value="Forgot password?" />
+</div>
