--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -500,12 +500,12 @@ ul {
 
 .uin-transparent-black {
     display: flex;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.9);
     justify-content: space-around;
     align-items: center;
     flex-direction: row;
     text-align: justify;
-    height: 100%;
+    height: 40%;
     width: 100%;
 }
 
@@ -518,14 +518,68 @@ ul {
     max-width: 100%;
 }
 
-input {
+input[type=text],
+input[type=email],
+input[type=password] {
     border: none;
     background: transparent;
-    border-bottom: 2px solid white;
+    border-bottom: 1px solid white;
     margin-bottom: 10px;
     color: white;
+    font-family: sans-serif;
 }
 
 input:focus {
     border: 3px solid #b57e07;
+}
+
+#uin-one-third-column {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    text-align: justify;
+    height: 100%;
+    width: 100%;
+}
+
+#uin-one-third-row
+{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    text-align: justify;
+    height: 15%;
+    width: 50%;
+    background-color: transparent;
+}
+
+#uin-one-third-row>div
+{
+    padding: 10px;
+}
+
+#uin-one-third-row>div>button>img{
+    width: 59px; 
+    height: 50px;
+}
+
+.center-buttons {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 70px;
+}
+
+.center-buttons>#form-button {
+    width: 100%;
+    height: 30px;
+    font-family: sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    background-color: #b57e07;
+    border-radius: 12px;
 }
