--- a/views/pages/food.ejs
+++ b/views/pages/food.ejs
@@ -1,28 +1,49 @@
 <!DOCTYPE html>
 <!-- This html document uses EJS -->
 <html>
-    <head>
-        <!-- heads.ejs -->
-        <%- include('../partials/head'); %>
-    </head>
-    <body>
-        <!-- side-nav-bar.ejs -->
-        <%- include('../partials/side-nav-bar'); %>
+
+<head>
+    <!-- heads.ejs -->
+    <%- include('../partials/head'); %>
+</head>
+
+<body>
+    <!-- side-nav-bar.ejs -->
+    <%- include('../partials/side-nav-bar'); %>
         <!-- top-nav-bar.ejs -->
         <%- include('../partials/top-nav-bar'); %>
 
-        <div id="food1">
-            <div class="transparent-background-title">
-                <div id="food11">
-                    <p class="font-white" id="title">FOOD</p>
-                    <div class="filter-row">
-                        <p class="font-white">Sort By:</p>
-                        <button>Name</button>
-                        <button>Date</button>
+            <div id="food1">
+                <div class="transparent-background-title">
+                    <div id="food11">
+                        <p class="font-white" id="title">FOOD</p>
+                        <div class="filter-row">
+                            <p class="font-white">Sort By:</p>
+                            <button>Name</button>
+                            <button>Date</button>
+                        </div>
+                        <!-- For each food from database -->
+                        <div id="uin-one-third-row">
+                            <div>
+                                <img src="/img/placeholder.jpg" width="100" height="100"
+                                    style="object-fit:cover;border-radius:10px;">
+                            </div>
+                            <div>
+                                <p class="font-white" id="title">Gigachad</p>
+                                <p class="font-white">Potter ipsum wand elf parchment wingardium.
+                                    Wand betrayal parseltongue soul detention elf lion back his.
+                                </p>
+                            </div>
+                            <div>
+                                <button>
+                                    <img src="/img/heart.png">
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        
-    </body>
+
+</body>
+
 </html>
