Added login feature
NEED TO ADDRESS:
    username cannot be passed on to partials since routing only renders the main pages.

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -520,7 +520,8 @@ ul {
 
 input[type=text],
 input[type=email],
-input[type=password] {
+input[type=password],
+input[type=repassword] {
     border: none;
     background: transparent;
     border-bottom: 1px solid white;
