--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -24,8 +24,9 @@
                 </div>
                 <div class="uin-center-right">
                     <form action="/register" method="post">
-                        <%- include('../partials/user-form'); %>
+                        <%- include('../partials/registration-form'); %>
                     </form>
+                    <a href="/login">Login</a>
                 </div>
             </div>
             <div></div>
