--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -13,19 +13,25 @@
     <%- include('../partials/side-nav-bar'); %>
     <!-- top-nav-bar.ejs -->
     <%- include('../partials/top-nav-bar'); %>
-
+    
     <div class="uin-background">
         <div id="uin-one-third-column">
             <div></div>
             <div class="uin-transparent-black">
                 <div class="uin-center-left">
-                    <form action="/login" method>
-                        <%- include('../partials/user-form'); %>
-                    </form>
+                    <p class="font-peach" id="title">Welcome!</p>
+                    <p class="font-white" id="content">Login</p>
                 </div>
                 <div class="uin-center-right">
-                    <p class="font-peach" id="title">Hey there!</p>
-                    <p class="font-white" id="content">Log into an existing account</p>
+                    <form action="/login" method="post">
+                        <%- include('../partials/login-form'); %>
+                    </form>
+                    <p class="font-white">
+                        <% if (messages.error){ %>
+                            <%= messages.error%>
+                        <% } %>
+                    </p>
+                    <a href="/register">Register</a>
                 </div>
             </div>
             <div></div>
