Added dynamic username on top-nav-bar.
Co-Authored-By: RA Jocsing <rbjocsing@up.edu.ph>

--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -12,7 +12,7 @@
     <!-- side-nav-bar.ejs -->
     <%- include('../partials/side-nav-bar'); %>
     <!-- top-nav-bar.ejs -->
-    <%- include('../partials/top-nav-bar'); %>
+    <!-- <%- include('../partials/top-nav-bar'); %> -->
     
     <div class="uin-background">
         <div id="uin-one-third-column">
