Changed field to "password" type.

--- a/views/partials/registration-form.ejs
+++ b/views/partials/registration-form.ejs
@@ -5,7 +5,7 @@
 <label for="password" class="font-peach" id="content">Password:</label><br>
 <input type="password" id="password" name="password" required><br>
 <label for="repassword" class="font-peach" id="content">Confirm Password:</label><br>
-<input type="repassword" id="repassword" name="repassword" required><br>
+<input type="password" id="repassword" name="repassword" required><br>
 
 <!--pattern attribute for at least one special character in password-->
 <div class="center-buttons">
