Partial implementation of find place feature.

--- a/views/pages/traffic.ejs
+++ b/views/pages/traffic.ejs
@@ -33,4 +33,9 @@
         
         <div id="map"></div>
     </body>
+    <!-- @ignore syntax error -->
+    <script type='text/javascript'>
+      var initCoords = <%- JSON.stringify(coords || null) %>
+      console.log(initCoords);
+   </script>
 </html>
