Changes in CSS and forms.ejs
In CSS:
- Fixed background attachment made as comments in some divs

In forms.ejs
- Partial fix of login and register buttons

Goals:
- Fully fix login and register button
- Fetch DB info for food, places and landmarks, etc. Use this guide https://youtu.be/yH593K9fYvE

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -250,7 +250,7 @@ ul {
 #home1 {
     background-image: url("/img/paraw-regatta.png");
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    /*background-attachment: fixed;*/
     background-position: center;
     background-size: cover;
     height: 800px;
@@ -290,7 +290,7 @@ ul {
 #home2 {
     background-image: url("/img/festive-walk.png");
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    /*background-attachment: fixed;*/
     background-position: center;
     background-size: cover;
     height: 800px;
