--- a/views/partials/login-form.ejs
+++ b/views/partials/login-form.ejs
@@ -6,4 +6,5 @@
 <div class="center-buttons">
     <input type="submit" id="form-button" value="Login" />
     <input type="submit" id="form-button" value="Forgot password?" />
+    <a href="/register">Register</a>
 </div>
