--- a/views/partials/registration-form.ejs
+++ b/views/partials/registration-form.ejs
@@ -1,7 +1,6 @@
 <label for="username" class="font-peach" id="content">Username:</label><br>
 <input type="text" id="username" name="username" required><br>
-<label for="email" class="font-peach" id="content">Email:</label><br>
-<input type="email" id="email" name="email" required><br>
+<!-- REMOVED EMAIL FIELD-->
 <label for="password" class="font-peach" id="content">Password:</label><br>
 <input type="password" id="password" name="password" required><br>
 <label for="repassword" class="font-peach" id="content">Confirm Password:</label><br>
@@ -11,4 +10,5 @@
 <div class="center-buttons">
     <input type="submit" id="form-button" value="Sign up" />
     <!-- <input type="submit" id="form-button" value="Forgot password?" /> -->
+    <a href="/login">Login</a>
 </div>
