Added is username available check to /register

--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -25,6 +25,11 @@
                     <form action="/register" method="post">
                         <%- include('../partials/registration-form'); %>
                     </form>
+                    <p class="font-white">
+                        <% if (messages.error){ %>
+                            <%= messages.error%>
+                        <% } %>
+                    </p>
                 </div>
             </div>
             <div></div>
