--- a/views/pages/food.ejs
+++ b/views/pages/food.ejs
@@ -23,22 +23,13 @@
                             <button>Date</button>
                         </div>
                         <!-- For each food from database -->
-                        <div id="uin-one-third-row">
-                            <div>
-                                <img src="/img/placeholder.jpg" width="100" height="100"
-                                    style="object-fit:cover;border-radius:10px;">
-                            </div>
-                            <div>
-                                <p class="font-white" id="title">Gigachad</p>
-                                <p class="font-white">Potter ipsum wand elf parchment wingardium.
-                                    Wand betrayal parseltongue soul detention elf lion back his.
-                                </p>
-                            </div>
-                            <div>
-                                <button>
-                                    <img src="/img/heart.png">
-                                </button>
-                            </div>
+                        <div id="wrap">
+                            <%- include('../partials/dummyfood'); %>
+                            <%- include('../partials/dummyfood'); %>
+                            <%- include('../partials/dummyfood'); %>
+                            <%- include('../partials/dummyfood'); %>
+                            <%- include('../partials/dummyfood'); %>
+                            <%- include('../partials/dummyfood'); %>
                         </div>
                     </div>
                 </div>
