--- a/views/pages/places-and-landmarks.ejs
+++ b/views/pages/places-and-landmarks.ejs
@@ -21,6 +21,15 @@
                         <button>Reviews</button>
                         <button>Date</button>
                     </div>
+                    <!-- Just a dummy to show -->
+                    <div id="wrap">
+                        <%- include('../partials/dummyfood'); %>
+                        <%- include('../partials/dummyfood'); %>
+                        <%- include('../partials/dummyfood'); %>
+                        <%- include('../partials/dummyfood'); %>
+                        <%- include('../partials/dummyfood'); %>
+                        <%- include('../partials/dummyfood'); %>
+                    </div>
                 </div>
             </div>
         </div>
