--- a/views/pages/accommodation.ejs
+++ b/views/pages/accommodation.ejs
@@ -20,6 +20,15 @@
                         <button>Name</button>
                         <button>Type</button>
                     </div>
+                    <!-- Just a dummy to show -->
+                    <div id="wrap">
+                        <%- include('../partials/dummyfood'); %>
+                        <%- include('../partials/dummyfood'); %>
+                        <%- include('../partials/dummyfood'); %>
+                        <%- include('../partials/dummyfood'); %>
+                        <%- include('../partials/dummyfood'); %>
+                        <%- include('../partials/dummyfood'); %>
+                    </div>
                 </div>
             </div>
         </div>
